// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph bold 1`] = `
<p
  class="sc-dkzDqf cIYcjd"
>
  Heller UI
</p>
`;

exports[`Paragraph default 1`] = `
<p
  class="sc-bczRLJ eYHBae"
>
  Heller UI
</p>
`;

exports[`Paragraph dynamic color 1`] = `
<p
  class="sc-bczRLJ cOywHh"
  color="deeppink"
>
  Heller UI
</p>
`;

exports[`Paragraph italic & bold 1`] = `
<p
  class="sc-hKMtZM kOUGb"
>
  Heller UI
</p>
`;

exports[`Paragraph italic 1`] = `
<p
  class="sc-gsnTZi jleSwx"
>
  Heller UI
</p>
`;
